Link 'Budget by School' and register new charts
Update navigation and chart wiring

--- a/studentFees.html
+++ b/studentFees.html
@@ -22,7 +22,7 @@
                 <li><a href="budgetCuts.html">Budget Cuts</a></li>
                 <li><a href="#">Budget Over Time</a></li>
                 <li><a href="studentFees.html" class="active">Student Fees</a></li>
-                <li><a href="#">Budget by School </a></li>
+                <li><a href="schoolBudgets.html">Budget by School </a></li>
                 <li><a href="aux-budget.html">Auxiliary Budget</a></li>
                 <li><a href="#">Credits</a></li>
             </ul>
